# repo-learn

./: .env.example  CLAUDE.md  IMPLEMENTATION_COMPLETE.md  README.md  run.sh  subagent_tool_calls.md
.agent/rules/: repo-learn.md
backend/: .gitignore  langgraph.json  main.py  pyproject.toml
backend/agent/: __init__.py  graph.py  middleware.py  subagents.py  tool_call_store.py  tools.py  webapp.py
backend/api/: __init__.py
data/: .gitignore
docs/: agent_strategy.md  conversation.md  current_progress.md  deepagent_qa.md  deepagent_report.md  purpose.md  srs.md
docs/debugging/: hidden_bugs_audit.md  redirect_loop_rca.md
docs/design/: agent_strategy.md  design_srs.md
docs/old/: conversation.md  deepagent_qa.md  deepagent_report.md
docs/old/student_projects/: experiments_bitirme.md
docs/student_projects/: experiments_ara.md  methodology_implementation.md  methodology_overview.md  methodology_vibe_coding.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/files/: route.ts
frontend/src/app/api/storage/: route.ts
frontend/src/app/api/tutorials/: route.ts
frontend/src/app/new/: page.tsx
frontend/src/components/: BrainPanel.tsx  FileSystemPanel.tsx  GridPanel.tsx  MermaidDiagram.tsx  PlannerPanel.tsx  Toast.tsx
frontend/src/components/ide/: CodeViewer.tsx  TabBar.tsx
frontend/src/context/: JobContext.tsx
frontend/src/hooks/: useAgentStream.ts  usePersistentAgent.ts  useThreadHistory.ts
frontend/src/lib/: langgraph.ts
scripts/: run_backend.sh  run_frontend.sh
(+7 files in other folders)
